SFDCProject/src/objects/DocuSign_Template__c.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Name__c</fullName>
        <label>Utility Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DocuSign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>